--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,25 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background: linear-gradient(270deg, #89bdff, #ffa5a5, #e88bff);
+  background-size: 600% 600%;
+  
+  -webkit-animation: FaceRecognitionBG 8s ease infinite;
+  -moz-animation: FaceRecognitionBG 8s ease infinite;
+  animation: FaceRecognitionBG 8s ease infinite;
 }
+  @-webkit-keyframes FaceRecognitionBG {
+      0%{background-position:0% 50%}
+      50%{background-position:100% 50%}
+      100%{background-position:0% 50%}
+  }
+  @-moz-keyframes FaceRecognitionBG {
+      0%{background-position:0% 50%}
+      50%{background-position:100% 50%}
+      100%{background-position:0% 50%}
+  }
+  @keyframes FaceRecognitionBG { 
+      0%{background-position:0% 50%}
+      50%{background-position:100% 50%}
+      100%{background-position:0% 50%}
+  }
